Change log
==========

1.1 (unreleased)
----------------
- Factoring: Moved the DocsBuilder class into its own module.


1.0 (2010-07-23)
----------------
- Initial release